apps/rammus/teable/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teable
  namespace: teable
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: tbl.tn.example.com
      http:
        paths:
          - backend:
              service:
                name: teable
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - tbl.tn.example.com
      secretName: teable-cert
